handleClassAnnotation in lists